News UAT/force-app/main/default/objects/Case/fields/Original_Supplied_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Original_Supplied_From_Email__c</fullName>
    <inlineHelpText>Original Supplied From Email when Case was created.</inlineHelpText>
    <label>Original Supplied From Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>