News UAT/force-app/main/default/objects/Case/fields/Original_Supplied_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Original_Supplied_To_Email__c</fullName>
    <inlineHelpText>Original Supplied To Email when Case was created.</inlineHelpText>
    <label>Original Supplied To Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>