News UAT/force-app/main/default/objects/Case/fields/Other_Audience_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Audience_Information__c</fullName>
    <description>Other audience information details</description>
    <label>Age Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>