News UAT/force-app/main/default/objects/Case/fields/Other_media_considered_by_client__c.field-meta.xml
<CustomField>
    <fullName>Other_media_considered_by_client__c</fullName>
    <description>Is the client considering any other form of media? Please specify product(s)</description>
    <inlineHelpText>Is the client considering any other form of media? Please specify product(s)</inlineHelpText>
    <label>Other media considered by client?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>