News UAT/force-app/main/default/objects/Case/fields/Other_Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Product_Details__c</fullName>
    <description>Other Product Details</description>
    <label>Rate discounts you are providing</label>
    <type>TextArea</type>
</CustomField>