News UAT/force-app/main/default/objects/Case/fields/Other_relevant_spend_information__c.field-meta.xml
<CustomField>
    <fullName>Other_relevant_spend_information__c</fullName>
    <description>Customer history, relationship, if new business why haven&#39;t they advertised before, detail any past ideas pitched?</description>
    <inlineHelpText>Customer history, relationship, if new business why haven&#39;t they advertised before, detail any past ideas pitched?</inlineHelpText>
    <label>Other customer background information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>