News UAT/force-app/main/default/objects/Case/fields/Other_specific_targeting_information__c.field-meta.xml
<CustomField>
    <fullName>Other_specific_targeting_information__c</fullName>
    <label>Other specific targeting information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>