News UAT/force-app/main/default/objects/Case/fields/Page_Positions__c.field-meta.xml
<CustomField>
    <fullName>Page_Positions__c</fullName>
    <description>Page Positions for News Australia products discussed</description>
    <inlineHelpText>Page Positions for News Australia products discussed?</inlineHelpText>
    <label>Page Positions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>