News UAT/force-app/main/default/objects/Case/fields/Paid_Up_Capital__c.field-meta.xml
<CustomField>
    <fullName>Paid_Up_Capital__c</fullName>
    <description>Account&#39;s Paid Up Capital</description>
    <inlineHelpText>Account&#39;s Paid Up Capital</inlineHelpText>
    <label>Paid Up Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>