News UAT/force-app/main/default/objects/Case/fields/Payer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2015-02 UserStory16.2</description>
    <label>Payer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>