News UAT/force-app/main/default/objects/Case/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Payment Method for Complaint/DRS</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepaid</fullName>
            </value>
            <value>
                <fullName>Postpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>