News UAT/force-app/main/default/objects/Case/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <label>Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>Cars Guide</fullName>
            </value>
            <value>
                <fullName>Funeral</fullName>
            </value>
            <value>
                <fullName>Gen Class</fullName>
                <default>true</default>
                <label>Gen Class</label>
            </value>
            <value>
                <fullName>Legal Notices</fullName>
            </value>
            <value>
                <fullName>LET</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Motoring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Notices</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Trades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>