News UAT/force-app/main/default/objects/Case/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Booking_System_Portfolio_Junction__c.Booking_System_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Booking_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Booking_System_Portfolio_Junction__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>