News UAT/force-app/main/default/objects/Case/fields/Post_Analysis_Activity_Report_Required__c.field-meta.xml
<CustomField>
    <fullName>Post_Analysis_Activity_Report_Required__c</fullName>
    <description>Post analysis activity/report required</description>
    <inlineHelpText>Is a post analysis activity/report required?</inlineHelpText>
    <label>Post Analysis Activity/Report Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>