News UAT/force-app/main/default/objects/Case/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <description>Account Primary Address</description>
    <formula>Account.BillingStreet  &amp; &quot;, &quot; &amp;  Account.BillingCity  &amp; &quot;, &quot; &amp;  Account.BillingState &amp; &quot;, &quot; &amp;  Account.BillingCountry &amp; &quot;, &quot; &amp;  Account.BillingPostalCode</formula>
    <label>Business Address</label>
    <type>Text</type>
</CustomField>