News UAT/force-app/main/default/objects/Case/fields/Priority_Please_Note__c.field-meta.xml
<CustomField>
    <fullName>Priority_Please_Note__c</fullName>
    <formula>&quot;Priority will always default to 4-Low when a case is created. The Customer Solutions team will then update as appropriate.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Please Note</label>
    <type>Text</type>
</CustomField>