News UAT/force-app/main/default/objects/Case/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <description>Type of Proposal</description>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Post Analysis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>