News UAT/force-app/main/default/objects/Case/fields/Proposal_Type_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type_Other_Details__c</fullName>
    <label>If Other, type details here</label>
    <length>255</length>
    <type>Text</type>
</CustomField>