News UAT/force-app/main/default/objects/Case/fields/Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Date__c</fullName>
    <description>Publication Date related to the Case</description>
    <label>Publication Date</label>
    <type>Date</type>
</CustomField>