News UAT/force-app/main/default/objects/Case/fields/Publications__c.field-meta.xml
<CustomField>
    <fullName>Publications__c</fullName>
    <description>Select Publications for Direct Debit Application</description>
    <inlineHelpText>Select Publications for Direct Debit Application</inlineHelpText>
    <label>Publications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nationwide News</fullName>
            </value>
            <value>
                <fullName>News Local</fullName>
            </value>
            <value>
                <fullName>News Life Media</fullName>
            </value>
            <value>
                <fullName>Herald and Weekly Times P/L</fullName>
            </value>
            <value>
                <fullName>Leader Newspapers</fullName>
            </value>
            <value>
                <fullName>The Geelong Advertiser</fullName>
            </value>
            <value>
                <fullName>Davies Bros</fullName>
            </value>
            <value>
                <fullName>Queensland Newspapers</fullName>
            </value>
            <value>
                <fullName>Quest Newspapers</fullName>
            </value>
            <value>
                <fullName>Gold Coast Publications</fullName>
            </value>
            <value>
                <fullName>Townsville Bulletin</fullName>
            </value>
            <value>
                <fullName>The Cairns Post</fullName>
            </value>
            <value>
                <fullName>Advertiser Newspapers</fullName>
            </value>
            <value>
                <fullName>Messenger Newspapers</fullName>
            </value>
            <value>
                <fullName>Perth Sunday Times</fullName>
            </value>
            <value>
                <fullName>NT News</fullName>
            </value>
            <value>
                <fullName>Moshtix</fullName>
            </value>
            <value>
                <fullName>Foxtix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>