News UAT/force-app/main/default/objects/Case/fields/Queue_Division__c.field-meta.xml
<CustomField>
    <fullName>Queue_Division__c</fullName>
    <description>Item-00072 - Displays 4th, 5th, 6th characters of the Queue Name, if Case Owner is a Queue.</description>
    <formula>IF(BEGINS(OwnerId, &#39;00G&#39;),MID(Owner:Queue.DeveloperName,4,3),&#39;&#39;)</formula>
    <inlineHelpText>Displays 4th, 5th, 6th characters of the Queue Name, if Case Owner is a Queue.</inlineHelpText>
    <label>Queue Division</label>
    <type>Text</type>
</CustomField>