News UAT/force-app/main/default/objects/Case/fields/Ready_for_Routing__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fields is automatically checked after the contents of the emails is analysed for keywords. This Field is a flag to trigger a workflow and should not to be displayed.</description>
    <label>Ready for Routing</label>
    <type>Checkbox</type>
</CustomField>