News UAT/force-app/main/default/objects/Case/fields/Reason_for_Insight__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Insight__c</fullName>
    <description>Reason for Insight</description>
    <inlineHelpText>Reason for insight (this could be a key objection around audience reach and/or competitor issue e.g. SMH vs. DT/NewsLocal mix)?</inlineHelpText>
    <label>Reason for Insight?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>