News UAT/force-app/main/default/objects/Case/fields/Recent_Lead_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Lead_Source_Date__c</fullName>
    <label>Recent Lead Source Date</label>
    <type>Date</type>
</CustomField>