News UAT/force-app/main/default/objects/Case/fields/Recent_Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Recent_Lead_Source_Detail__c</fullName>
    <label>Recent Lead Source Detail</label>
    <length>150</length>
    <type>Text</type>
</CustomField>