News UAT/force-app/main/default/objects/Case/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <description>Refund Method for DRS</description>
    <label>Refund Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Casual Account</fullName>
            </value>
            <value>
                <fullName>CHQ Refund</fullName>
            </value>
            <value>
                <fullName>Credit Card Refund</fullName>
            </value>
            <value>
                <fullName>EFT Refund</fullName>
            </value>
            <value>
                <fullName>Monthly Account</fullName>
            </value>
            <value>
                <fullName>Nil Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>