News UAT/force-app/main/default/objects/Case/fields/Release_BLD1__c.field-meta.xml
<CustomField>
    <fullName>Release_BLD1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release BLD1</label>
    <type>Checkbox</type>
</CustomField>