News UAT/force-app/main/default/objects/Case/fields/Relevant_Content__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Relevant Content, Information, Images or Past Presentations.</description>
    <inlineHelpText>Relevant Content, Information, Images or Past Presentations.</inlineHelpText>
    <label>Relevant Content</label>
    <type>Checkbox</type>
</CustomField>