News UAT/force-app/main/default/objects/Case/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects_del</relationshipName>
    <type>Lookup</type>
</CustomField>