News UAT/force-app/main/default/objects/Case/fields/Revenue_Group__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Group__c</fullName>
    <formula>TEXT(Opportunity__r.Revenue_Group__c)</formula>
    <label>Revenue Group</label>
    <type>Text</type>
</CustomField>