News UAT/force-app/main/default/objects/Case/fields/Revenue_Receiving_Rep__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Receiving_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Revenue receiving Sales Rep - for Complaint/DRS.</description>
    <label>Revenue Receiving Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>