News UAT/force-app/main/default/objects/Case/fields/RFP_Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>RFP_Customer_Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Lapsed Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>