News UAT/force-app/main/default/objects/Case/fields/RFP_Team_del__c.field-meta.xml
<CustomField>
    <fullName>RFP_Team_del__c</fullName>
    <label>RFP Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>KAC</fullName>
            </value>
            <value>
                <fullName>IAMA</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>