News UAT/force-app/main/default/objects/Case/fields/Secondary_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Address__c</fullName>
    <description>Address for Services &amp; Notices</description>
    <formula>IF( ISNULL( Account.ShippingPostalCode ) , Account.BillingStreet  &amp; &quot;, &quot; &amp;  Account.BillingCity  &amp; &quot;, &quot; &amp;  Account.BillingState &amp; &quot;, &quot; &amp;  Account.BillingCountry &amp; &quot;, &quot; &amp;  Account.BillingPostalCode ,  Account.ShippingStreet  &amp; &quot;, &quot; &amp;  Account.ShippingCity  &amp; &quot;, &quot; &amp;  Account.ShippingState &amp; &quot;, &quot; &amp;  Account.ShippingCountry &amp; &quot;, &quot; &amp;  Account.ShippingPostalCode )</formula>
    <inlineHelpText>Address for Services &amp; Notices (will display Account&#39;s secondary address where populated/primary where not)</inlineHelpText>
    <label>Address for Services &amp; Notices</label>
    <type>Text</type>
</CustomField>