News UAT/force-app/main/default/objects/Case/fields/Sections__c.field-meta.xml
<CustomField>
    <fullName>Sections__c</fullName>
    <description>Section/s for News Australia products discussed</description>
    <inlineHelpText>Section/s for News Australia products discussed?</inlineHelpText>
    <label>Section/s</label>
    <length>100</length>
    <type>Text</type>
</CustomField>