News UAT/force-app/main/default/objects/Case/fields/Select_the_Insights_you_require__c.field-meta.xml
<CustomField>
    <fullName>Select_the_Insights_you_require__c</fullName>
    <label>Select the Insights you require</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attitudes and Interests</fullName>
            </value>
            <value>
                <fullName>Demographics</fullName>
            </value>
            <value>
                <fullName>Media Behaviours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>