News UAT/force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity of Case</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Critical</fullName>
            </value>
            <value>
                <fullName>2-High</fullName>
            </value>
            <value>
                <fullName>3-Medium</fullName>
            </value>
            <value>
                <fullName>4-Low</fullName>
                <default>true</default>
                <label>4-Low</label>
            </value>
            <value>
                <fullName>5-Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>