News UAT/force-app/main/default/objects/Case/fields/SFCaseType__c.field-meta.xml
<CustomField>
    <fullName>SFCaseType__c</fullName>
    <description>Concatenated field, made of, CaseType, Division, Pillar, for Genesys&#39;s consumption.</description>
    <formula>&#39;CaseType:&#39; &amp; Genesys_Case_Type__c
&amp; &#39;|Division:&#39; &amp; Queue_Division__c
&amp; &#39;|Pillar:&#39; &amp; TEXT(Pillar__c)</formula>
    <label>SFCaseType</label>
    <type>Text</type>
</CustomField>