News UAT/force-app/main/default/objects/Case/fields/share_to_News_Australia__c.field-meta.xml
<CustomField>
    <fullName>share_to_News_Australia__c</fullName>
    <description>% of total pitch share to News Australia</description>
    <inlineHelpText>% of total pitch share to News Australia</inlineHelpText>
    <label>% share to News Australia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>