News UAT/force-app/main/default/objects/Case/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size/s for News Australia products discussed</description>
    <inlineHelpText>Size/s for News Australia products discussed?</inlineHelpText>
    <label>Size/s</label>
    <length>100</length>
    <type>Text</type>
</CustomField>