News UAT/force-app/main/default/objects/Case/fields/Spend_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Spend_Frequency__c</fullName>
    <description>Specify the spend frequency for flighting for product(s)</description>
    <inlineHelpText>Specify the spend frequency for flighting for product(s)</inlineHelpText>
    <label>Spend Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>By week</fullName>
            </value>
            <value>
                <fullName>By fortnight</fullName>
            </value>
            <value>
                <fullName>By month</fullName>
            </value>
            <value>
                <fullName>By quarter</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Other - specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>