News UAT/force-app/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Sub Status of Case</description>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not an Issue</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Resolved - Approved</fullName>
            </value>
            <value>
                <fullName>Resolved - Declined</fullName>
            </value>
            <value>
                <fullName>Resolved - Make Good</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>