News UAT/force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Sub Type of Case</description>
    <inlineHelpText>Sub Type of Case</inlineHelpText>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ad Content &amp; Design</fullName>
            </value>
            <value>
                <fullName>AdPoint Reservations</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Amend Booking</fullName>
            </value>
            <value>
                <fullName>Billing/Invoice (DRS)</fullName>
            </value>
            <value>
                <fullName>Cancel Booking</fullName>
            </value>
            <value>
                <fullName>Colour</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Credit Application Enquiry</fullName>
            </value>
            <value>
                <fullName>Credit Limit Increase</fullName>
            </value>
            <value>
                <fullName>Customer Spend Reduction</fullName>
            </value>
            <value>
                <fullName>Dept. of Fair Trading</fullName>
            </value>
            <value>
                <fullName>Editorial</fullName>
            </value>
            <value>
                <fullName>Face-to-Face visit request</fullName>
            </value>
            <value>
                <fullName>Lapsed Portfolio Client</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Material Instructions</fullName>
            </value>
            <value>
                <fullName>New Booking</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Premedia - Cannot Resupply</fullName>
            </value>
            <value>
                <fullName>Premedia - Incorrect Material</fullName>
            </value>
            <value>
                <fullName>Premedia - Late Material</fullName>
            </value>
            <value>
                <fullName>Premedia - Size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>