News UAT/force-app/main/default/objects/Case/fields/Subheading__c.field-meta.xml
<CustomField>
    <fullName>Subheading__c</fullName>
    <description>Subheading</description>
    <inlineHelpText>Creative content Subheading</inlineHelpText>
    <label>Subheading</label>
    <length>100</length>
    <type>Text</type>
</CustomField>