News UAT/force-app/main/default/objects/Case/fields/Supplied_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplied_To_Email__c</fullName>
    <inlineHelpText>Copy of SuppliedTo__c so that users can use this field as a filter for list views and also be audited. This is copied by workflows. Note: Where the users have sent to multiple users; emails may be truncated.</inlineHelpText>
    <label>Supplied To Email.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>