News UAT/force-app/main/default/objects/Case/fields/SuppliedFromEmail_Text__c.field-meta.xml
<CustomField>
    <fullName>SuppliedFromEmail_Text__c</fullName>
    <description>Text to store from Email</description>
    <label>Supplied From Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>