News UAT/force-app/main/default/objects/Case/fields/SuppliedTo__c.field-meta.xml
<CustomField>
    <fullName>SuppliedTo__c</fullName>
    <description>The Email Address from the Routing Email</description>
    <label>Supplied To Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>