News UAT/force-app/main/default/objects/Case/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <description>Target Audience (primary and secondary if available)</description>
    <inlineHelpText>Target Audience (primary and secondary if available)</inlineHelpText>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client defined</fullName>
            </value>
            <value>
                <fullName>FSAM defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>