News UAT/force-app/main/default/objects/Case/fields/Target_Audience_Group_s__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Group_s__c</fullName>
    <label>Target Audience Group/s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Families</fullName>
            </value>
            <value>
                <fullName>Grocery Buyers</fullName>
            </value>
            <value>
                <fullName>Travel Intenders</fullName>
            </value>
            <value>
                <fullName>Home Owners/Intenders</fullName>
            </value>
            <value>
                <fullName>High Net worth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>