News UAT/force-app/main/default/objects/Case/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team Leader for the Complaint/DRS Case</description>
    <label>Team Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>