News UAT/force-app/main/default/objects/Case/fields/Team_Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader_Email__c</fullName>
    <description>Team Leader Email</description>
    <label>Team Leader Email</label>
    <type>Email</type>
</CustomField>